invisible elements are no longer rendered

--- a/design-practice/main.css
+++ b/design-practice/main.css
@@ -13,6 +13,7 @@ body {
 
 .main-container {
   width: 50vw;
+  display: none;
   opacity: 0;
   transition: opacity 0.5s ease-in-out 0.1s;
   z-index: 1;
